Se corrigen bugs.